# naoqi-robot-vision-motion

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
docs/Notes/: CompVisi_Chloe.txt  modified-red-ball-det.txt  red-ball-det.txt  vision-exp.txt
docs/slides/: Motion Control and Computer Vision Application in autonomous.pptx
src/: nao_main.cpp  nao_main_alt_ip.cpp  nao_main_alt_ip.cpp .cpp
